@@ -1,8 +1,10 @@
 README_MAC.txt for PortMidi
 Roger Dannenberg
-15 jan 2007
+17 jan 2007
 
 To build PortMidi for Mac OS X:
+
+==== USING MAKE ====
 
 go back up to the portmidi
 directory and type 
@@ -29,10 +31,18 @@ and other options, type
 
 make -f pm_mac/Makefile.osx help
 
+==== USING XCODE ====
+
+Open portmidi/pm_mac/pm_mac.xcode with Xcode and 
+build what you need: if you are just exploring, start with 
+the lib+test suite.
+
 [pm_mac.xcodeproj courtesy of Leigh Smith]
 
 CHANGELOG
 
+17-Jan-2007 Roger B. Dannenberg
+    Explicit instructions for Xcode
 15-Jan-2007 Roger B. Dannenberg
     Changed instructions because of changes to Makefile.osx
 07-Oct-2006 Roger B. Dannenberg
